Update and rename MIT SCL.md to 2021-11-02 MIT SCL.md

--- a/_talks/2021-11-02 MIT SCL.md
+++ b/_talks/2021-11-02 MIT SCL.md
@@ -2,7 +2,7 @@
 title: "Pecha Kucha: Vehicle Detection And Tracking For 511 Traffic Cameras"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
+permalink: /talks/2021-11-02 MIT SCL
 venue: "Virtual Meeting"
 date: 2021-11-02
 location: " MIT, Sensible City Lab"
